<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity" >

    <ListView
        android:id="@+id/city_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/city_name_edit_text"
        android:layout_above="@+id/go"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:animateLayoutChanges="true"
        android:layout_marginTop="10dp" >
    </ListView>

    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/go"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/add_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/city_list_view"
        android:text="@string/add" />

    <EditText
        android:id="@+id/city_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_alignBaseline="@+id/add_city"
        android:layout_alignBottom="@+id/add_city"
        android:layout_alignLeft="@+id/city_list_view"
        android:layout_toLeftOf="@id/add_city"
        android:ems="10"
        android:hint="@string/hint_city_name" />

</RelativeLayout>
